--- a/root-config/src/index.ejs
+++ b/root-config/src/index.ejs
@@ -31,7 +31,9 @@
         "react": "https://cdn.jsdelivr.net/npm/react@17.0.1/umd/react.production.min.js",
         "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@17.0.1/umd/react-dom.production.min.js",
         "@konoha/navbar": "//localhost:8080/konoha-navbar.js",
-        "@konoha/ninjas": "//localhost:8081/konoha-ninjas.js"
+        "@konoha/ninjas": "//localhost:8081/konoha-ninjas.js",
+        "@konoha/ninjas": "//localhost:8081/konoha-ninjas.js",
+        "@konoha/root-config": "konoha-root-config.js"
       }
     }
   </script>
@@ -50,13 +52,6 @@
     }
   </script>
   <% } %>
-
-  <!--
-    If you need to support Angular applications, uncomment the script tag below to ensure only one instance of ZoneJS is loaded
-    Learn more about why at https://single-spa.js.org/docs/ecosystem-angular/#zonejs
-  -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/zone.js@0.11.3/dist/zone.min.js"></script> -->
-
   <script src="https://cdn.jsdelivr.net/npm/import-map-overrides@2.2.0/dist/import-map-overrides.js"></script>
   <% if (isLocal) { %>
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/system.js"></script>
