test multijob pipe

--- a/root-config/server/views/index.ejs
+++ b/root-config/server/views/index.ejs
@@ -33,11 +33,9 @@
           "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
           "react": "https://cdn.jsdelivr.net/npm/react@17.0.1/umd/react.production.min.js",
           "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@17.0.1/umd/react-dom.production.min.js",
-          "@konoha/navbar": "//localhost:8080/konoha-navbar.js",
-          "@konoha/ninjas": "//localhost:8081/konoha-ninjas.js",
-          "@konoha/ninjas": "//localhost:8081/konoha-ninjas.js",
-          "@konoha/root-config": "konoha-root-config.js",
-          "@single-spa/welcome": "https://unpkg.com/single-spa-welcome/dist/single-spa-welcome.js"
+          "@konoha/main": "https://konoha.blob.core.windows.net/main/konoha-main.js",
+          "@konoha/ninjas": "https://konoha.blob.core.windows.net/ninjas/konoha-ninjas.js",
+          "@konoha/root-config": "/static/konoha-root-config.js"
         }
       }
     </script>
